# Graduation-Design-Thesis-of-NJIT

./: .gitignore  README.md  自动化学院本科毕业设计（论文）论文-范例-2026版.docx
latex_output/: 自动化学院本科毕业设计论文范例.tex
latex_output/latex_assets/: image10.wmf  image11.wmf  image13.emf  image14.emf  image15.emf  image16.emf  image3.emf  image5.emf  image6.wmf  image7.wmf  image8.wmf  image9.wmf
src/rm_65_config/: .setup_assistant
src/rm_65_config/launch/: gazebo_moveit_demo.launch.py
src/rm_65_rrt_console/: package.xml  setup.cfg  setup.py
src/rm_65_rrt_console/launch/: rrt_console.launch.py
src/rm_65_rrt_console/resource/: rm_65_rrt_console
src/rm_65_rrt_console/rm_65_rrt_console/: __init__.py  rrt_console_node( cubic).py  rrt_console_node(liner).py
src/rm_description/launch/: display_robot_launch.py
src/rm_description/urdf/: rm_65.urdf.xacro
src/rm_gazebo/launch/: gazebo_65_demo.launch.py
tools/: docx_to_latex.py
